%% Mermaid class diagram for TOstDO
classDiagram
    class AppModule {
        +provideFileSystemService()
        +providePathProvider()
        +provideConfigCreator()
        +provideAppDirectoryInitializer()
    }

    class RealFileSystemService {
        +getUserHome(): Path
        +exists(Path): boolean
        +createDirectories(Path)
        +getResourceAsStream(String): InputStream
        +writeString(Path, String, Charset)
    }

    class PathProvider {
        <<interface>>
        +getUserHome(): Path
        +getAppDir(): Path
        +getConfigPath(): Path
        +getTodoPath(): Path
    }

    class DefaultPathProvider {
        +DefaultPathProvider(FileSystemService)
        +getUserHome(): Path
    }

    class ConfigCreator {
        <<interface>>
        +createDefaultConfig(Path appDir)
    }

    class DefaultConfigCreatorImpl {
        +createDefaultConfig(Path appDir)
        -applyTodoPathReplacement(String content, String newTodoPath)
    }

    class AppDirectoryInitializer {
        +initialize()
        -ensureAppDir(Path)
        -ensureConfig(Path)
        -ensureTodo(Path)
    }

    class FileConfigLoader {
        +loadAppConfiguration(): Optional<AppConfiguration>
    }

    class ConfigurationService {
        +getAppConfiguration(): Optional<AppConfiguration>
    }

    class ToDoRepository {
        +add(ToDo)
        +remove(ToDo)
        +getAll(): List<ToDo>
    }

    class ToDoRepositorySynchronizer {
        +sync()
        -readToDos(): List<ToDo>
    }

    class FileWatcher {
        +startWatching(Path)
        +addListener(listener)
    }

    class ToDoReminderService {
        +startReminders()
        +stopReminders()
    }

    %% relationships
    AppModule --> RealFileSystemService
    AppModule --> DefaultPathProvider
    AppModule --> DefaultConfigCreatorImpl
    AppModule --> AppDirectoryInitializer

    RealFileSystemService ..|> FileSystemService
    DefaultPathProvider ..|> PathProvider
    DefaultConfigCreatorImpl ..|> ConfigCreator

    AppDirectoryInitializer --> FileSystemService : uses
    AppDirectoryInitializer --> ConfigCreator : uses

    ConfigurationService --> FileConfigLoader
    FileConfigLoader --> PathProvider : reads config path
    DefaultConfigCreatorImpl --> FileSystemService : reads resource, writes config

    ToDoRepositorySynchronizer --> ToDoRepository : updates
    FileWatcher --> ToDoRepositorySynchronizer : notifies
    ToDoReminderService --> ToDoRepository : reads todos

